--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body style="background-color: #f5f6fa">
     <nav
-      class="navbar navbar-expand-lg bg-white shadow-lg"
+      class="navbar navbar-expand-lg bg-white shadow-lg fixed-top"
       data-bs-theme="dark"
     >
       <div class="container-fluid">
@@ -37,6 +37,30 @@
           <i class="bi bi-caret-down-fill"></i>
         </button>
       </div>
+      <ul class="navbar-nav ml-auto d-none d-md-block">
+        <li class="nav-item">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Super Admin
+          </a>
+
+          <div
+            class="dropdown-menu dropdown-menu-end me-2 mt-2"
+            aria-labelledby="navbarDropdown"
+          >
+            <a class="dropdown-item dropdown" href="#"> Edit settings </a>
+            <a class="dropdown-item" href="#"> Edit profile page </a>
+            <a class="dropdown-item" href="#"> Show profile page </a>
+            <a class="dropdown-item" href="#"> Logout </a>
+          </div>
+        </li>
+      </ul>
     </nav>
 
     <div class="container-fluid">
@@ -44,7 +68,7 @@
         <nav
           id="sidebarMenu"
           class="col-md-3 col-lg-2 d-md-block bg-white sidebar collapse"
-          style="height: 100vh"
+          style="height: 100vh; margin-top: 60px; position: fixed"
         >
           <div
             class="d-flex justify-content-center align-items-center flex-column border-bottom mt-2 pb-3"
@@ -65,7 +89,10 @@
             <h5 class="text-gray-800 mt-3">Super Admin</h5>
           </div>
 
-          <ul class="list-unstyled px-3 mt-2">
+          <ul
+            class="list-unstyled px-3 mt-2"
+            style="overflow-y: auto; height: 65vh"
+          >
             <li class="mb-3 d-flex align-items-center">
               <i class="bi bi-speedometer me-3 fs-4" style="color: #898e99"></i>
 
@@ -332,6 +359,20 @@
                       </li>
                     </ul>
                   </div>
+                </li>
+                <li class="mb-3 d-flex align-items-center">
+                  <i
+                    class="bi bi-door-open-fill me-3 fs-4"
+                    style="color: #898e99"
+                  ></i>
+
+                  <a
+                    href="#"
+                    class="text-decoration-none text-gray-800 align-items-center"
+                    style="cursor: pointer"
+                  >
+                    Logout
+                  </a>
                 </li>
               </div>
             </li>
