--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
               <div
                 class="d-flex justify-content-between flex-column flex-lg-row gap-2 gap-lg-0"
               >
-                <div>
+                <div class="">
                   <button
                     class="btn btn-primary"
                     data-bs-toggle="modal"
@@ -469,6 +469,374 @@
                     <option value="2">200</option>
                     <option value="3">300</option>
                   </select>
+                </div>
+              </div>
+              <div class="bg-white pb-4 mb-b">
+                <div class="mt-4 table-responsive">
+                  <table
+                    class="table table-hover bg-white shadow-none"
+                    style="border-collapse: collapse"
+                  >
+                    <thead>
+                      <tr>
+                        <th scope="col" class="text-nowrap">
+                          <input
+                            class="form-check-input me-2 ms-2"
+                            type="checkbox"
+                            value=""
+                            id="flexCheckDefault"
+                          />Date
+                        </th>
+                        <th scope="col" class="text-nowrap">Parents ID</th>
+                        <th scope="col" class="text-nowrap">Job ID</th>
+                        <th scope="col" class="text-nowrap">Course</th>
+                        <th scope="col" class="text-nowrap">Location</th>
+                        <th scope="col" class="text-nowrap">Salary</th>
+                        <th scope="col">EM</th>
+                        <th scope="col" class="text-nowrap">Created By</th>
+                        <th scope="col" class="text-nowrap">Aplied Tutors</th>
+                        <th scope="col" class="text-nowrap">Live</th>
+                        <th scope="col" class="text-nowrap">Action</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr class="" style="vertical-align: middle">
+                        <td
+                          scope="row "
+                          class="text-center text-nowrap"
+                          style="padding: 30px 18px"
+                        >
+                          <input
+                            class="form-check-input me-2"
+                            type="checkbox"
+                            value=""
+                            id="flexCheckDefault"
+                          />06-06-2023
+                        </td>
+                        <td class="text-info">246785</td>
+                        <td class="text-info">
+                          <span
+                            class="p-1 rounded"
+                            style="background-color: #e6eef7"
+                            >23457</span
+                          >
+                        </td>
+                        <td class="">Class-8</td>
+                        <td class="text-wrap">Tolarbag, Mirpur</td>
+                        <td>5000</td>
+                        <td class="text-info">EM</td>
+                        <td class="text-nowrap">Khalid Rahman</td>
+                        <td class="text-center">
+                          <span
+                            class="bg-primary text-white px-2 rounded-pill"
+                            style="width: fit-content"
+                          >
+                            4
+                          </span>
+                        </td>
+                        <td>
+                          <div class="form-check form-switch">
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              role="switch"
+                              id="flexSwitchCheckDefault"
+                              style="transform: scale(1.5)"
+                            />
+                          </div>
+                        </td>
+                        <td>
+                          <button class="btn btn-primary py-1">Action</button>
+                        </td>
+                      </tr>
+                      <tr class="" style="vertical-align: middle">
+                        <td
+                          scope="row "
+                          class="text-center text-nowrap"
+                          style="padding: 30px 18px"
+                        >
+                          <input
+                            class="form-check-input me-2"
+                            type="checkbox"
+                            value=""
+                            id="flexCheckDefault"
+                          />06-06-2023
+                        </td>
+                        <td class="text-info">246785</td>
+                        <td class="text-info">
+                          <span
+                            class="p-1 rounded"
+                            style="background-color: #e6eef7"
+                            >23457</span
+                          >
+                        </td>
+                        <td class="">Class-8</td>
+                        <td class="text-wrap">Tolarbag, Mirpur</td>
+                        <td>5000</td>
+                        <td class="text-info">EM</td>
+                        <td class="text-nowrap">Khalid Rahman</td>
+                        <td class="text-center">
+                          <span
+                            class="bg-primary text-white px-2 rounded-pill"
+                            style="width: fit-content"
+                          >
+                            4
+                          </span>
+                        </td>
+                        <td>
+                          <div class="form-check form-switch">
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              role="switch"
+                              id="flexSwitchCheckDefault"
+                              style="transform: scale(1.5)"
+                            />
+                          </div>
+                        </td>
+                        <td>
+                          <button class="btn btn-primary py-1">Action</button>
+                        </td>
+                      </tr>
+                      <tr class="" style="vertical-align: middle">
+                        <td
+                          scope="row "
+                          class="text-center text-nowrap"
+                          style="padding: 30px 18px"
+                        >
+                          <input
+                            class="form-check-input me-2"
+                            type="checkbox"
+                            value=""
+                            id="flexCheckDefault"
+                          />06-06-2023
+                        </td>
+                        <td class="text-info">246785</td>
+                        <td class="text-info">
+                          <span
+                            class="p-1 rounded"
+                            style="background-color: #e6eef7"
+                            >23457</span
+                          >
+                        </td>
+                        <td class="">Class-8</td>
+                        <td class="text-wrap">Tolarbag, Mirpur</td>
+                        <td>5000</td>
+                        <td class="text-info">EM</td>
+                        <td class="text-nowrap">Khalid Rahman</td>
+                        <td class="text-center">
+                          <span
+                            class="bg-primary text-white px-2 rounded-pill"
+                            style="width: fit-content"
+                          >
+                            4
+                          </span>
+                        </td>
+                        <td>
+                          <div class="form-check form-switch">
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              role="switch"
+                              id="flexSwitchCheckDefault"
+                              style="transform: scale(1.5)"
+                            />
+                          </div>
+                        </td>
+                        <td>
+                          <button class="btn btn-primary py-1">Action</button>
+                        </td>
+                      </tr>
+                      <tr class="" style="vertical-align: middle">
+                        <td
+                          scope="row "
+                          class="text-center text-nowrap"
+                          style="padding: 30px 18px"
+                        >
+                          <input
+                            class="form-check-input me-2"
+                            type="checkbox"
+                            value=""
+                            id="flexCheckDefault"
+                          />06-06-2023
+                        </td>
+                        <td class="text-info">246785</td>
+                        <td class="text-info">
+                          <span
+                            class="p-1 rounded"
+                            style="background-color: #e6eef7"
+                            >23457</span
+                          >
+                        </td>
+                        <td class="">Class-8</td>
+                        <td class="text-wrap">Tolarbag, Mirpur</td>
+                        <td>5000</td>
+                        <td class="text-info">EM</td>
+                        <td class="text-nowrap">Khalid Rahman</td>
+                        <td class="text-center">
+                          <span
+                            class="bg-primary text-white px-2 rounded-pill"
+                            style="width: fit-content"
+                          >
+                            4
+                          </span>
+                        </td>
+                        <td>
+                          <div class="form-check form-switch">
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              role="switch"
+                              id="flexSwitchCheckDefault"
+                              style="transform: scale(1.5)"
+                            />
+                          </div>
+                        </td>
+                        <td>
+                          <button class="btn btn-primary py-1">Action</button>
+                        </td>
+                      </tr>
+                      <tr class="" style="vertical-align: middle">
+                        <td
+                          scope="row "
+                          class="text-center text-nowrap"
+                          style="padding: 30px 18px"
+                        >
+                          <input
+                            class="form-check-input me-2"
+                            type="checkbox"
+                            value=""
+                            id="flexCheckDefault"
+                          />06-06-2023
+                        </td>
+                        <td class="text-info">246785</td>
+                        <td class="text-info">
+                          <span
+                            class="p-1 rounded"
+                            style="background-color: #e6eef7"
+                            >23457</span
+                          >
+                        </td>
+                        <td class="">Class-8</td>
+                        <td class="text-wrap">Tolarbag, Mirpur</td>
+                        <td>5000</td>
+                        <td class="text-info">EM</td>
+                        <td class="text-nowrap">Khalid Rahman</td>
+                        <td class="text-center">
+                          <span
+                            class="bg-primary text-white px-2 rounded-pill"
+                            style="width: fit-content"
+                          >
+                            4
+                          </span>
+                        </td>
+                        <td>
+                          <div class="form-check form-switch">
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              role="switch"
+                              id="flexSwitchCheckDefault"
+                              style="transform: scale(1.5)"
+                            />
+                          </div>
+                        </td>
+                        <td>
+                          <button class="btn btn-primary py-1">Action</button>
+                        </td>
+                      </tr>
+                      <tr class="" style="vertical-align: middle">
+                        <td
+                          scope="row "
+                          class="text-center text-nowrap"
+                          style="padding: 30px 18px"
+                        >
+                          <input
+                            class="form-check-input me-2"
+                            type="checkbox"
+                            value=""
+                            id="flexCheckDefault"
+                          />06-06-2023
+                        </td>
+                        <td class="text-info">246785</td>
+                        <td class="text-info">
+                          <span
+                            class="p-1 rounded"
+                            style="background-color: #e6eef7"
+                            >23457</span
+                          >
+                        </td>
+                        <td class="">Class-8</td>
+                        <td class="text-wrap">Tolarbag, Mirpur</td>
+                        <td>5000</td>
+                        <td class="text-info">EM</td>
+                        <td class="text-nowrap">Khalid Rahman</td>
+                        <td class="text-center">
+                          <span
+                            class="bg-primary text-white px-2 rounded-pill"
+                            style="width: fit-content"
+                          >
+                            4
+                          </span>
+                        </td>
+                        <td>
+                          <div class="form-check form-switch">
+                            <input
+                              class="form-check-input"
+                              type="checkbox"
+                              role="switch"
+                              id="flexSwitchCheckDefault"
+                              style="transform: scale(1.5)"
+                            />
+                          </div>
+                        </td>
+                        <td>
+                          <button class="btn btn-primary py-1">Action</button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <div
+                  class="d-flex justify-content-center align-items-center gap-2"
+                >
+                  <button
+                    class="btn btn-outline-primary py-1 px-2 text-gray-500"
+                  >
+                    <i class="bi bi-chevron-left"></i>
+                  </button>
+                  <button
+                    class="btn btn-outline-primary py-1 text-gray-500"
+                    style="padding: 0 13px"
+                  >
+                    1
+                  </button>
+
+                  <button
+                    class="btn btn-outline-primary py-1 text-gray-500"
+                    style="padding: 0 13px"
+                  >
+                    2
+                  </button>
+                  <button
+                    class="btn btn-outline-primary py-1 text-gray-500"
+                    style="padding: 0 13px"
+                  >
+                    ..
+                  </button>
+
+                  <button
+                    class="btn btn-outline-primary py-1 text-gray-500"
+                    style="padding: 0 13px"
+                  >
+                    34
+                  </button>
+
+                  <button
+                    class="btn btn-outline-primary py-1 px-2 text-gray-500"
+                  >
+                    <i class="bi bi-chevron-right"></i>
+                  </button>
                 </div>
               </div>
             </div>
@@ -806,8 +1174,8 @@
           loop: true,
           nav: true,
           navText: [
-            "<i class='bi bi-chevron-left arrow-icon'></i>",
             "<i class='bi bi-chevron-right arrow-icon'></i>",
+            "<i class='bi bi-chevron-left arrow-icon'></i>",
           ],
           navClass: ["carousel-nav-btn-prev", "carousel-nav-btn-next"],
           responsive: {
