--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@
                       class="ms-4 px-3 py-1 my-3"
                       style="border-left: 3px solid #898e99"
                     >
-                      <a href="#" class="text-gray-800 text-decoration-none"
+                      <a
+                        href="index.html"
+                        class="text-gray-800 text-decoration-none"
                         >Available Offers</a
                       >
                     </li>
@@ -515,10 +517,11 @@
                         </td>
                         <td class="text-info">246785</td>
                         <td class="text-info">
-                          <span
-                            class="p-1 rounded"
+                          <a
+                            href="job.html"
+                            class="p-1 rounded text-info text-decoration-none"
                             style="background-color: #e6eef7"
-                            >23457</span
+                            >23457</a
                           >
                         </td>
                         <td class="">Class-8</td>
@@ -564,11 +567,11 @@
                         </td>
                         <td class="text-info">246785</td>
                         <td class="text-info">
-                          <span
-                            class="p-1 rounded"
-                            style="background-color: #e6eef7"
-                            >23457</span
-                          >
+                           <a
+                          href="job.html"
+                          class="p-1 rounded text-info text-decoration-none"
+                          style="background-color: #e6eef7"
+                          >23457</a
                         </td>
                         <td class="">Class-8</td>
                         <td class="text-wrap">Tolarbag, Mirpur</td>
@@ -613,11 +616,11 @@
                         </td>
                         <td class="text-info">246785</td>
                         <td class="text-info">
-                          <span
-                            class="p-1 rounded"
-                            style="background-color: #e6eef7"
-                            >23457</span
-                          >
+                           <a
+                          href="job.html"
+                          class="p-1 rounded text-info text-decoration-none"
+                          style="background-color: #e6eef7"
+                          >23457</a
                         </td>
                         <td class="">Class-8</td>
                         <td class="text-wrap">Tolarbag, Mirpur</td>
@@ -662,11 +665,12 @@
                         </td>
                         <td class="text-info">246785</td>
                         <td class="text-info">
-                          <span
-                            class="p-1 rounded"
-                            style="background-color: #e6eef7"
-                            >23457</span
-                          >
+                          <a
+                          href="job.html"
+                          class="p-1 rounded text-info text-decoration-none"
+                          style="background-color: #e6eef7"
+                          >23457</a
+                        >
                         </td>
                         <td class="">Class-8</td>
                         <td class="text-wrap">Tolarbag, Mirpur</td>
@@ -711,11 +715,11 @@
                         </td>
                         <td class="text-info">246785</td>
                         <td class="text-info">
-                          <span
-                            class="p-1 rounded"
-                            style="background-color: #e6eef7"
-                            >23457</span
-                          >
+                           <a
+                          href="job.html"
+                          class="p-1 rounded text-info text-decoration-none"
+                          style="background-color: #e6eef7"
+                          >23457</a
                         </td>
                         <td class="">Class-8</td>
                         <td class="text-wrap">Tolarbag, Mirpur</td>
@@ -760,11 +764,11 @@
                         </td>
                         <td class="text-info">246785</td>
                         <td class="text-info">
-                          <span
-                            class="p-1 rounded"
-                            style="background-color: #e6eef7"
-                            >23457</span
-                          >
+                           <a
+                          href="job.html"
+                          class="p-1 rounded text-info text-decoration-none"
+                          style="background-color: #e6eef7"
+                          >23457</a
                         </td>
                         <td class="">Class-8</td>
                         <td class="text-wrap">Tolarbag, Mirpur</td>
