--- a/job.html
+++ b/job.html
@@ -824,6 +824,9 @@
                       </div>
                     </div>
                   </div>
+                  <div class="d-flex justify-content-end">
+                    <button class="btn btn-primary">Edit</button>
+                  </div>
                 </div>
                 <div
                   class="tab-pane fade"
