--- a/available-offer.html
+++ b/available-offer.html
@@ -217,9 +217,7 @@
                       class="ms-4 px-3 py-1 my-3"
                       style="border-left: 3px solid #898e99"
                     >
-                      <a
-                        href="aplications.html"
-                        class="text-gray-800 text-decoration-none"
+                      <a href="#" class="text-gray-800 text-decoration-none"
                         >Applications</a
                       >
                     </li>
@@ -394,13 +392,11 @@
           <div class="col-md-9 ms-sm-auto col-lg-10" style="margin-top: 60px">
             <!-- mini nav starts here -->
             <div class="d-flex gap-4 flex-column flex-md-row p-3 mb-2">
-              <a
-                class="text-decoration-none text-gray-800 active-border"
-                href="index.html"
+              <a class="text-decoration-none text-gray-800" href="index.html"
                 >All offers</a
               >
               <a
-                class="text-decoration-none text-gray-800"
+                class="text-decoration-none text-gray-800 active-border"
                 href="available-offer.html"
                 >Available offers</a
               >
@@ -421,13 +417,13 @@
                   class="bg-white p-3 rounded-3 shadow-lg d-flex justify-content-center align-items-center flex-column mb-2"
                 >
                   <p class="fw-bold fs-5 mb-1 mt-3">234567</p>
-                  <p class="">All offer</p>
+                  <p class="">Available offer</p>
                 </div>
                 <div
                   class="bg-white p-3 rounded-3 shadow-lg d-flex justify-content-center align-items-center flex-column mb-2"
                 >
                   <p class="fw-bold fs-5 mb-1 mt-3">23567</p>
-                  <p class="">Dhaka</p>
+                  <p class="">Todays Offer</p>
                 </div>
                 <div
                   class="bg-white p-3 rounded-3 shadow-lg d-flex justify-content-center align-items-center flex-column mb-2"
