--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                       class="ms-4 px-3 py-1 mt-3"
                       style="border-left: 3px solid #898e99"
                     >
-                      <a href="#" class="text-gray-800 text-decoration-none"
+                      <a href="add-offers.html" class="text-gray-800 text-decoration-none"
                         >Add Offers</a
                       >
                     </li>
