--- a/aplicant-list.html
+++ b/aplicant-list.html
@@ -389,7 +389,7 @@
         <main class="container-custom">
           <div class="col-md-9 ms-sm-auto col-lg-10" style="margin-top: 60px">
             <!-- main content section starts here -->
-            <div class="py-4 px-3">
+            <div class="py-4 ps-3" style="padding-right: 13px">
               <div
                 class="d-flex justify-content-between bg-white p-4 rounded-3 shadow-lg align-items-center mb-4"
               >
