--- a/sms-view.html
+++ b/sms-view.html
@@ -389,7 +389,7 @@
         <main class="container-custom">
           <div class="col-md-9 ms-sm-auto col-lg-10" style="margin-top: 60px">
             <!-- main content section starts here -->
-            <div class="px-lg-3 pt-3 ps-md-1 py-lg-4">
+            <div class="py-4 ps-3" style="padding-right: 13px">
               <div class="bg-white rounded-3 shadow-lg px-4 pt-4 pb-2">
                 <div class="row row-cols-1 row-cols-md-2">
                   <div>
