--- a/aplications.html
+++ b/aplications.html
@@ -413,7 +413,7 @@
             </div>
             <!-- mini nav ends here -->
             <!-- main content section starts here -->
-            <div class="px-3">
+            <div class="ps-3 pe-2">
               <div class="owl-carousel">
                 <div
                   class="bg-white p-3 rounded-3 shadow-lg d-flex justify-content-center align-items-center flex-column mb-2"
