--- a/see-condition.html
+++ b/see-condition.html
@@ -386,7 +386,7 @@
         <main class="container-custom">
           <div class="col-md-9 ms-sm-auto col-lg-10" style="margin-top: 60px">
             <!-- main content section starts here -->
-            <div class="px-3 py-4">
+            <div class="ps-3  py-4" style="padding-right: 13px">
               <div class="pt-2 shadow-lg rounded-3 bg-white">
                 <div class="table-responsive">
                   <table
