--- a/sms-log.html
+++ b/sms-log.html
@@ -389,7 +389,7 @@
         <main class="container-custom">
           <div class="col-md-9 ms-sm-auto col-lg-10" style="margin-top: 60px">
             <!-- main content section starts here -->
-            <div class="px-1 pe-md-2 ps-md-3 px-lg-3 py-4">
+            <div class="ps-3 py-4" style="padding-right: 13px">
               <div
                 class="row row-cols-2 row-cols-lg-4 gap-0 gap-lg-4 gx-0 mb-3"
               >
@@ -426,8 +426,8 @@
                       class="table table-hover bg-white shadow-none"
                       style="border-collapse: collapse"
                     >
-                      <thead>
-                        <tr>
+                    <thead style="border-bottom: 1px solid #c8ced3">
+                      <tr>
                           <th scope="col" class="text-nowrap ps-4">SL</th>
                           <th scope="col" class="text-nowrap">Job ID</th>
                           <th scope="col" class="text-nowrap">Sender Name</th>
