--- a/status-log.html
+++ b/status-log.html
@@ -389,15 +389,15 @@
         <main class="container-custom">
           <div class="col-md-9 ms-sm-auto col-lg-10" style="margin-top: 60px">
             <!-- main content section starts here -->
-            <div class="pt-4 px-3">
+            <div class="pt-4 ps-3 "style="padding-right: 13px">
               <div class="pt-2 shadow-lg rounded-3 bg-white">
                 <div class="table-responsive">
                   <table
                     class="table table-hover bg-white shadow-none"
                     style="border-collapse: collapse"
                   >
-                    <thead>
-                      <tr>
+                  <thead style="border-bottom: 1px solid #c8ced3">
+                    <tr>
                         <th scope="col" class="text-nowrap">SL</th>
                         <th scope="col" class="text-nowrap">EM NAme</th>
                         <th scope="col" class="text-nowrap">Em ID</th>
