--- a/add-offers.html
+++ b/add-offers.html
@@ -28,7 +28,7 @@
       data-bs-theme="dark"
     >
       <div class="container-fluid">
-        <img src="/images/logo.svg" alt="logo" />
+        <a href="index.html"><img src="/images/logo.svg" alt="logo" /></a>
         <button
           class="navbar-toggler d-md-none collapsed"
           type="button"
@@ -73,7 +73,7 @@
         <!-- sidebar starts here -->
         <nav
           id="sidebarMenu"
-          class="col-md-3 col-lg-2 d-md-block bg-white sidebar collapse sidebar-width"
+          class="col-md-3 col-lg-2 d-md-block bg-white sidebar collapse sidebar-width shadow-lg"
           style="height: 100vh; margin-top: 60px; position: fixed"
         >
           <div
@@ -389,7 +389,7 @@
         <main class="container-custom">
           <div class="col-md-9 ms-sm-auto col-lg-10" style="margin-top: 60px">
             <!-- main content section starts here -->
-            <div class="ps-md-2 py-3 px-lg-3 py-lg-4">
+            <div class="ps-3 py-3 py-lg-4" style="padding-right: 13px">
               <div class="row row-cols-lg-2 row-cols-1">
                 <div>
                   <div class="bg-white rounded-3 shadow-lg p-4 mb-4">
@@ -426,7 +426,10 @@
                             </p>
                           </div>
                         </div>
-                        <button class="btn shadow-none text-info"><i class="bi bi-plus-lg fw-bold me-3"></i>Add New Parent</button>
+                        <button class="btn shadow-none text-info">
+                          <i class="bi bi-plus-lg fw-bold me-3"></i>Add New
+                          Parent
+                        </button>
                       </div>
                     </div>
                   </div>
