--- a/aplications.html
+++ b/aplications.html
@@ -28,7 +28,7 @@
       data-bs-theme="dark"
     >
       <div class="container-fluid">
-        <img src="/images/logo.svg" alt="logo" />
+        <a href="index.html"><img src="/images/logo.svg" alt="logo" /></a>
         <button
           class="navbar-toggler d-md-none collapsed"
           type="button"
@@ -73,7 +73,7 @@
         <!-- sidebar starts here -->
         <nav
           id="sidebarMenu"
-          class="col-md-3 col-lg-2 d-md-block bg-white sidebar collapse sidebar-width"
+          class="col-md-3 col-lg-2 d-md-block bg-white sidebar collapse sidebar-width shadow-lg"
           style="height: 100vh; margin-top: 60px; position: fixed"
         >
           <div
@@ -480,14 +480,14 @@
                   </select>
                 </div>
               </div>
-              <div class="bg-white pb-4 mb-b">
-                <div class="mt-4 table-responsive">
+              <div class="bg-white pb-4 mb-b shadow-lg rounded-3 p-2 my-4">
+                <div class=" table-responsive">
                   <table
                     class="table table-hover bg-white shadow-none"
                     style="border-collapse: collapse"
                   >
-                    <thead>
-                      <tr>
+                  <thead style="border-bottom: 1px solid #c8ced3">
+                    <tr>
                         <th scope="col" class="text-nowrap">
                           <input
                             class="form-check-input me-2 ms-2"
