--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       data-bs-theme="dark"
     >
       <div class="container-fluid">
-        <img src="/images/logo.svg" alt="logo" />
+        <a href="index.html"><img src="/images/logo.svg" alt="logo" /></a>
         <button
           class="navbar-toggler d-md-none collapsed"
           type="button"
@@ -73,7 +73,7 @@
         <!-- sidebar starts here -->
         <nav
           id="sidebarMenu"
-          class="col-md-3 col-lg-2 d-md-block bg-white sidebar collapse sidebar-width"
+          class="col-md-3 col-lg-2 d-md-block bg-white sidebar collapse sidebar-width shadow-lg"
           style="height: 100vh; margin-top: 60px; position: fixed"
         >
           <div
@@ -477,7 +477,7 @@
                   </select>
                 </div>
               </div>
-              <div class="bg-white shadow-lg rounded-3 p-2 mt-4">
+              <div class="bg-white shadow-lg rounded-3 p-2 my-4">
                 <div class="bg-white pb-4 mb-b">
                   <div class="table-responsive">
                     <table
