--- a/status-log.html
+++ b/status-log.html
@@ -28,7 +28,7 @@
       data-bs-theme="dark"
     >
       <div class="container-fluid">
-        <img src="/images/logo.svg" alt="logo" />
+        <a href="index.html"><img src="/images/logo.svg" alt="logo" /></a>
         <button
           class="navbar-toggler d-md-none collapsed"
           type="button"
@@ -73,7 +73,7 @@
         <!-- sidebar starts here -->
         <nav
           id="sidebarMenu"
-          class="col-md-3 col-lg-2 d-md-block bg-white sidebar collapse sidebar-width"
+          class="col-md-3 col-lg-2 d-md-block bg-white sidebar collapse sidebar-width shadow-lg"
           style="height: 100vh; margin-top: 60px; position: fixed"
         >
           <div
@@ -389,15 +389,15 @@
         <main class="container-custom">
           <div class="col-md-9 ms-sm-auto col-lg-10" style="margin-top: 60px">
             <!-- main content section starts here -->
-            <div class="pt-4 ps-3 "style="padding-right: 13px">
+            <div class="pt-4 ps-3" style="padding-right: 13px">
               <div class="pt-2 shadow-lg rounded-3 bg-white">
                 <div class="table-responsive">
                   <table
                     class="table table-hover bg-white shadow-none"
                     style="border-collapse: collapse"
                   >
-                  <thead style="border-bottom: 1px solid #c8ced3">
-                    <tr>
+                    <thead style="border-bottom: 1px solid #c8ced3">
+                      <tr>
                         <th scope="col" class="text-nowrap">SL</th>
                         <th scope="col" class="text-nowrap">EM NAme</th>
                         <th scope="col" class="text-nowrap">Em ID</th>
